--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "importsNotUsedAsValues": "error",
     "checkJs": true,
     "outDir": "dist"
