add sqlite database

--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "author": "Ozoku",
   "license": "MIT",
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.4",
     "@types/node": "^18.17.14",
+    "drizzle-kit": "^0.19.13",
     "tsx": "^3.12.8",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "better-sqlite3": "^8.6.0",
     "cron": "^2.4.3",
+    "drizzle-orm": "^0.28.6",
     "execa": "^8.0.1",
     "zod": "^3.22.2"
   }
