--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noImplicitReturns": true,
     "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
+    "esModuleInterop": true,
     // "noUnusedLocals": true,
     // "noUnusedParameters": true,
     "importsNotUsedAsValues": "error",
